--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
