--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.0
   http: ^1.2.2
+  shimmer: ^3.0.0
+  firebase_remote_config: ^5.1.0
+  firebase_analytics: ^11.3.0
 
 dev_dependencies:
   flutter_test:
