--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shimmer: ^3.0.0
   firebase_remote_config: ^5.1.0
   firebase_analytics: ^11.3.0
+  cloud_firestore: ^5.2.2
 
 dev_dependencies:
   flutter_test:
